[package]
name = "punchme"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15.7"
regex = "1.10.4"
reqwest = { version = "0.12.4", features = ["blocking", "json"] }
tokio = { version = "1.38.0", features = ["full"] }
tokio-cron-scheduler = { version = "0.10.2", features = ["signal"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = "s"
