[package]
name = "punchme"
version = "0.2.0"
edition = "2021"

[dependencies]
chrono-tz = "0.9.0"
dotenvy = "0.15.7"
lettre = "0.11.7"
regex = "1.10.4"
reqwest = { version = "0.12.4", features = ["blocking", "json"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["full"] }
tokio-cron-scheduler = { version = "0.10.2", features = ["signal"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
